--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 								<header id="header">
 									<a href="index.html" class="logo"> Flight Dynamics | Controls</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://x.com/lovesh_1711" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+										<!-- <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li> -->
+										<li><a href="https://www.instagram.com/lovesh_1711/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
+										<!-- <li><a href="https://x.com/lovesh_1711" class="icon brands fa-Github"><span class="label">Twitter</span></a></li> -->
+
 									</ul>
 								</header>
 
@@ -158,53 +160,63 @@
 									<header class="major">
 										<h2 style="font-size: 2.5rem;">Projects</h2>
 									</header>
+									<!-- <p style="margin-bottom: 5px;" >Following are some of my projects which showcases my skills and experience through real-world examples of my work. Each project is briefly described with links to code repositories and live demos in it. Kindly find my detailed resume here, which reflects my ability to solve complex problems, work with different technologies, and manage projects effectively.</p> -->
+
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/lovesh1711/Multi-UAV-Path-Planning-for-Urban-Air-Mobility" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<h3>Multi-UAV path planning for urban air mobility</h3>
+											<p>Aimed to design an efficient algorithm that entails the intricate task of ensuring collision-free paths for multiple drones operating within the same airspace, all while minimizing time and cost.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/lovesh1711/Multi-UAV-Path-Planning-for-Urban-Air-Mobility" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/IvLabs/tethered-aerial-vehicle" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<h3>Tethered Aerial Vehicle for Blind Navigation</h3>
+											<p>Aimed to control a tethered aerial vehicle to assist a blind person by approximating the system as a damped spring-mass system and implemented human state aware controller.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/IvLabs/tethered-aerial-vehicle" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/lovesh1711/Inverted-Pendulum" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<h3>Inverted Pendulum</h3>
+											<p>Aimed to stabilize the inverted pendulum in an upright position by implementing PID and LQR controllers and compared the results from both</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/lovesh1711/Inverted-Pendulum" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/lovesh1711/3D-Controller-and-Trajectory-Generation" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3>Robust QuadCopter Control</h3>
+											<p>Modeled a quadcopter capable of dynamic maneuvers Implemented PD controller in 2D and 3D for various trajectories Achieved Minimum snap trajectory for quadrotor given the desired waypoints</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/lovesh1711/3D-Controller-and-Trajectory-Generation" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/lovesh1711/Stylus_controlled_snake_game" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3>Stylus Controlled Snake Game</h3>
+											<p>Aimed to create a fully fledged snake game controlled by a stylus Implemented HSV Backprojection for detecting a dynamically coloured stylus and determining its direction of movement.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/lovesh1711/Stylus_controlled_snake_game" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/rdlynx19/ESP32-Wayfinder" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>WayFinder</h3>
+											<p>Aimed to address the navigation challenges faced by cyclists and bikers in a safer manner compared to using mobile phones. It does not require any custom application as it uses exisiting voice packs.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/rdlynx19/ESP32-Wayfinder" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="https://github.com/lovesh1711/Trajectory-Estimation-using-EKF" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Trajectory Estimation using EKF</h3>
+											<p>Implemented an Extended Kalman filter, for estimating the trajectory of a vehicle using odometry.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lovesh1711/Trajectory-Estimation-using-EKF" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
