--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                   ><span class="label">Twitter</span></a
                 >
               </li>
+			  <li><a href="https://github.com/lovesh1711" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+			  <li><a href="https://www.linkedin.com/in/lovesh-goyal-119033219/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+
               <!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
               <!-- <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li> -->
               <li>
@@ -113,6 +116,7 @@
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
             </div>
+			
             <span class="image object">
               <img
 				id="profile-photo"
@@ -190,7 +194,7 @@
                 </div>
               </article>
               <article>
-                <!-- <span class="icon solid fa-rocket"></span> -->
+                <!-- <span class="icon solid fa-rocket"></span> --> 
                 <div class="content">
                   <h2 style="color: rgb(3, 3, 19); margin-bottom: 5px">
                     VECROS
@@ -248,7 +252,7 @@
                 <a
                   href="https://github.com/lovesh1711/Multi-UAV-Path-Planning-for-Urban-Air-Mobility"
                   class="image"
-                  ><img src="images/pic01.jpg" alt=""
+                  ><img src="images/uav3Dpaths-18adb971.png " alt=""
                 /></a>
                 <h3>Multi-UAV path planning for urban air mobility</h3>
                 <p>
@@ -271,7 +275,7 @@
                 <a
                   href="https://github.com/IvLabs/tethered-aerial-vehicle"
                   class="image"
-                  ><img src="images/pic02.jpg" alt=""
+                  ><img src="images/tethered-71295316.png" alt="" style="width: auto; height: auto;" 
                 /></a>
                 <h3>Tethered Aerial Vehicle for Blind Navigation</h3>
                 <p>
@@ -293,7 +297,7 @@
                 <a
                   href="https://github.com/lovesh1711/Inverted-Pendulum"
                   class="image"
-                  ><img src="images/pic03.jpg" alt=""
+                  ><img src="images/pendulum-28a63917.png" alt=""
                 /></a>
                 <h3>Inverted Pendulum</h3>
                 <p>
@@ -315,7 +319,7 @@
                 <a
                   href="https://github.com/lovesh1711/3D-Controller-and-Trajectory-Generation"
                   class="image"
-                  ><img src="images/pic04.jpg" alt=""
+                  ><img src="images/copter-9d2783d6.png" alt="" style="width: auto; height: auto;"
                 /></a>
                 <h3>Robust QuadCopter Control</h3>
                 <p>
@@ -338,7 +342,7 @@
                 <a
                   href="https://github.com/lovesh1711/Stylus_controlled_snake_game"
                   class="image"
-                  ><img src="images/pic05.jpg" alt=""
+                  ><img src="images/stylus-7564e3ed.png" alt="" style="width: auto; height: auto;"
                 /></a>
                 <h3>Stylus Controlled Snake Game</h3>
                 <p>
@@ -361,7 +365,7 @@
                 <a
                   href="https://github.com/rdlynx19/ESP32-Wayfinder"
                   class="image"
-                  ><img src="images/pic06.jpg" alt=""
+                  ><img src="images/wayfinder-a8bc752f.png" alt="" style="width: auto; height: auto;"
                 /></a>
                 <h3>WayFinder</h3>
                 <p>
@@ -384,7 +388,7 @@
                 <a
                   href="https://github.com/lovesh1711/Trajectory-Estimation-using-EKF"
                   class="image"
-                  ><img src="images/pic06.jpg" alt=""
+                  ><img src="images/EKF-72a6197d.png" alt=""
                 /></a>
                 <h3>Trajectory Estimation using EKF</h3>
                 <p>
