--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html >
   <head>
+    <link rel="icon" href="images/logo-7029c7bc.png" type="image/png">
     <title>Lovesh Goyal</title>
     <meta charset="utf-8" />
     <meta
