--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@
                     </a>
                 </li>
             </ul>
+            <p><a href="https://drive.google.com/file/d/1SBoqLXKNh3PwywRVk4VdbdeQGLURUmdj/view?usp=sharing" style="color: red; font-weight: bold;">My Resume</a></p>
+
         </section>
         
           
