--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                     </a>
                 </li>
             </ul>
-            <p><a href="https://drive.google.com/file/d/1SBoqLXKNh3PwywRVk4VdbdeQGLURUmdj/view?usp=sharing" style="color: red; font-weight: bold;">My Resume</a></p>
+            <p><a href="https://drive.google.com/file/d/1SBoqLXKNh3PwywRVk4VdbdeQGLURUmdj/view?usp=sharing" style="color: red; font-weight: bold;">Here's my Resume</a></p>
 
         </section>
         
