Added hyperlink to paper title

--- a/index.html
+++ b/index.html
@@ -236,9 +236,11 @@
                     <strong>[July. 2024]</strong> Started direct PhD in Aerospace Engineering department, specializing in flight dynamics and control. 
                 </li>
                 <li>
-                  <strong>[June. 2024]</strong> Our paper A Two Stage Approach of Route Planning for
-                  UAVs in Logistic Distribution got accepted at ICFCR 2024-IEEE kerela section.
+                  <strong>[June. 2024]</strong> Our paper 
+                  <a href="https://ieeexplore.ieee.org/abstract/document/10763026" target="_blank">"A Two Stage Approach of Route Planning for UAVs in Logistic Distribution"</a> 
+                  got accepted at ICFCR 2024-IEEE Kerala section.
               </li>
+              
                 <li>
                   <strong>[May. 2024]</strong> Submitted my bachelor thesis and completed bachelors in electrical and electronics engineering from NIT Nagpur. 
               </li>
