--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <strong>[Dec. 2023]</strong> Completed my intern work at Endure air system as flight control engineer. 
             </li>
             <li>
-              <strong>[Sept. 2023]</strong> Received Junior research fellowship from Artpark, IIsc Bangalore
+              <strong>[Sept. 2023]</strong> Received Junior research fellowship from Artpark, IIsc Bangalore <a href="https://drive.google.com/file/d/1kLfvg-9x51h-aWbeAWQ8V1FLF4325IKm/view?usp=sharing" target="_blank">"Certificate of completion"</a>
           </li>
           <li>
             <strong>[Feb. 2023]</strong> Awarded the DAAD Wise scholarship to pursue onsite research in Germany.
