added new project and changed resume

--- a/index.html
+++ b/index.html
@@ -377,6 +377,34 @@
             <!-- <p style="margin-bottom: 5px;" >Following are some of my projects which showcases my skills and experience through real-world examples of my work. Each project is briefly described with links to code repositories and live demos in it. Kindly find my detailed resume here, which reflects my ability to solve complex problems, work with different technologies, and manage projects effectively.</p> -->
 
             <div class="posts">
+
+              <article>
+                <a
+                  href="https://github.com/lovesh1711/Model-Based-Control-and-State-Estimation-for-Quadruple-Tank-Process/tree/main"
+                  class="image"
+                  ><img src="images/MPC.png" alt="" 
+                /></a>
+                <h3>Model-Based Control and State Estimation for Quadruple Tank Process</h3>
+                <p>
+                  Developed Kalman and Particle Filters for state estimation and Model Predictive Control (MPC)
+                    algorithms in MATLAB, including both constrained and unconstrained cases
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://github.com/lovesh1711/Model-Based-Control-and-State-Estimation-for-Quadruple-Tank-Process/tree/main"
+                      class="button"
+                      >More</a
+                    >
+                  </li>
+                </ul>
+              </article>
+
+
+
+
+
+
               <article>
                 <a
                   href="https://github.com/lovesh1711/Multi-UAV-Path-Planning-for-Urban-Air-Mobility"
@@ -615,7 +643,7 @@
                     </a>
                 </li>
             </ul>
-            <p><a href="https://drive.google.com/file/d/17gZQomHRKFAOzdyzZozmD3WVZVuuWbUN/view?usp=sharing" style="color: red; font-weight: bold;">Here's my Resume</a></p>
+            <p><a href="https://drive.google.com/file/d/1gHmd_jeQnjkZHv1J-znRax1mLj6QV1Ds/view?usp=sharing" style="color: red; font-weight: bold;">Here's my Resume</a></p>
 
         </section>
         
